--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ permissions:
 jobs:
   provision:
     runs-on: ubuntu-latest
+    environment: matrix.hauke.cloud-transformation
     env:
       MATRIX_HOMESERVER: ${{ secrets.MATRIX_HOMESERVER }}
       MATRIX_AS_TOKEN: ${{ secrets.MATRIX_AS_TOKEN }}
