--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           test -n "${MATRIX_AS_USER_ID:-}" || { echo "MATRIX_AS_USER_ID is required"; exit 1; }
           test -f rooms.yaml || { echo "rooms.yaml not found"; exit 1; }
 
-      - name: Provision transformations (AS)
+      - name: Provision transformations (AS, merge-only)
         shell: bash
         run: |
           set -euo pipefail
@@ -114,18 +114,36 @@ jobs:
                 err=1; continue
               fi
 
-              echo "  - Updating state: type='${event_type}' key='${state_key}' from '${script_path}'"
-              export script_path="$(cat ${script_path})"
-              export name="${state_key}"
-              body=$(echo -n '{}' | jq -Rs '{"name": $ENV.name, "transformationFunction": $ENV.script_path}')
+              echo "  - Merging transformationFunction into state: type='${event_type}' key='${state_key}' from '${script_path}'"
 
+              code_str=$(jq -Rs '.' < "$script_path") # quoted JS string
+              get_url="${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room_id}")/state/${event_type}/$(urlenc "${state_key}")?user_id=$(urlenc "${MATRIX_AS_USER_ID}")"
+
+              # 1) GET current content (may 404 if not created yet)
+              get_code=$(curl -sS -o /tmp/current.json -w "%{http_code}" \
+                -H "Authorization: Bearer ${MATRIX_AS_TOKEN}" \
+                "${get_url}" || true)
+
+              if [[ "$get_code" == "200" ]]; then
+                current=$(cat /tmp/current.json)
+              else
+                # Start from empty object if the state event doesn't exist yet
+                current='{}'
+                echo "    (No existing state or not readable; starting fresh)"
+              fi
+
+              # 2) Merge-only: set .transformationFunction while preserving other fields
+              merged=$(jq --argjson code ${code_str} '
+                  .transformationFunction = $code
+                ' <<<"${current}")
+
+              # 3) PUT merged content back
               put_url="${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room_id}")/state/${event_type}/$(urlenc "${state_key}")?user_id=$(urlenc "${MATRIX_AS_USER_ID}")"
-
               http_code=$(curl -sS -o /tmp/resp.json -w "%{http_code}" \
                 -X PUT \
                 -H "Authorization: Bearer ${MATRIX_AS_TOKEN}" \
                 -H "Content-Type: application/json" \
-                --data "${body}" \
+                --data "${merged}" \
                 "${put_url}" || true)
 
               if [[ "$http_code" != 200 && "$http_code" != 201 ]]; then
