--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,10 +49,11 @@ jobs:
           resolve_room_id() {
             local ident="$1"
             if [[ "$ident" == \#*:* ]]; then
-              local enc; enc="$(urlenc "$ident")"
+              local enc
+              enc="$(urlenc "$ident")"
               curl -fsS -H "Authorization: Bearer ${MATRIX_AS_TOKEN}" \
-                "${MATRIX_HOMESERVER}/_matrix/client/v3/directory/room/${enc}?user_id=$(urlenc "${MATRIX_AS_USER_ID}")" \
-                | jq -r '.room_id'
+                "${MATRIX_HOMESERVER}/_matrix/client/v3/directory/room/${enc}?user_id=$(urlenc "${MATRIX_AS_USER_ID}")" |
+                jq -r '.room_id'
             else
               echo "$ident"
             fi
@@ -66,28 +67,34 @@ jobs:
               -H "Authorization: Bearer ${MATRIX_AS_TOKEN}" \
               -H "Content-Type: application/json" \
               --data '{}' \
-              "${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room}")/join?user_id=$(urlenc "${MATRIX_AS_USER_ID}")" \
-              || true
+              "${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room}")/join?user_id=$(urlenc "${MATRIX_AS_USER_ID}")" ||
+              true
           }
 
           rooms_len=$(yq '.rooms | length' rooms.yaml)
           [[ "$rooms_len" =~ ^[0-9]+$ ]] || rooms_len=0
 
           err=0
-          for idx in $(seq 0 $((rooms_len-1))); do
+          for idx in $(seq 0 $((rooms_len - 1))); do
             ident=$(yq -r ".rooms[$idx].room_id // .rooms[$idx].alias" rooms.yaml)
             event_type=$(yq -r ".rooms[$idx].event_type // env(DEFAULT_EVENT_TYPE)" rooms.yaml)
             conns_len=$(yq -r ".rooms[$idx].connections | length" rooms.yaml)
 
             if [[ -z "$ident" || "$ident" == "null" ]]; then
               echo "::error::Room at index $idx has neither room_id nor alias"
-              err=1; continue
+              err=1
+              continue
             fi
 
-            room_id=$(resolve_room_id "$ident") || { echo "::error::Resolve failed: $ident"; err=1; continue; }
+            room_id=$(resolve_room_id "$ident") || {
+              echo "::error::Resolve failed: $ident"
+              err=1
+              continue
+            }
             if [[ -z "$room_id" || "$room_id" == "null" ]]; then
               echo "::error::Could not resolve room: $ident"
-              err=1; continue
+              err=1
+              continue
             fi
 
             echo "Room: $ident → $room_id (event_type: $event_type)"
@@ -101,22 +108,26 @@ jobs:
               continue
             fi
 
-            for cidx in $(seq 0 $((conns_len-1))); do
+            for cidx in $(seq 0 $((conns_len - 1))); do
               state_key=$(yq -r ".rooms[$idx].connections[$cidx].state_key" rooms.yaml)
               script_path=$(yq -r ".rooms[$idx].connections[$cidx].script" rooms.yaml)
 
               if [[ -z "$state_key" || "$state_key" == "null" ]]; then
                 echo "::error::Missing state_key for $ident connection index $cidx"
-                err=1; continue
+                err=1
+                continue
               fi
               if [[ -z "$script_path" || "$script_path" == "null" || ! -f "$script_path" ]]; then
                 echo "::error::Script not found for $ident / $state_key: $script_path"
-                err=1; continue
+                err=1
+                continue
               fi
 
               echo "  - Merging transformationFunction into state: type='${event_type}' key='${state_key}' from '${script_path}'"
 
-              code_str=$(jq -Rs '.' < "$script_path") # quoted JS string
+              # Read the JS as a plain string; jq will escape it correctly
+              js_code="$(cat "$script_path")"
+
               get_url="${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room_id}")/state/${event_type}/$(urlenc "${state_key}")?user_id=$(urlenc "${MATRIX_AS_USER_ID}")"
 
               # 1) GET current content (may 404 if not created yet)
@@ -133,9 +144,9 @@ jobs:
               fi
 
               # 2) Merge-only: set .transformationFunction while preserving other fields
-              merged=$(jq --argjson code ${code_str} '
-                  .transformationFunction = $code
-                ' <<<"${current}")
+              merged=$(jq --arg code "$js_code" '
+                .transformationFunction = $code
+              ' <<<"$current")
 
               # 3) PUT merged content back
               put_url="${MATRIX_HOMESERVER}/_matrix/client/v3/rooms/$(urlenc "${room_id}")/state/${event_type}/$(urlenc "${state_key}")?user_id=$(urlenc "${MATRIX_AS_USER_ID}")"
@@ -148,7 +159,8 @@ jobs:
 
               if [[ "$http_code" != 200 && "$http_code" != 201 ]]; then
                 echo "::error::Failed to PUT state for ${ident} (${room_id}) / ${state_key} (HTTP ${http_code})"
-                echo "Response:"; cat /tmp/resp.json || true
+                echo "Response:"
+                cat /tmp/resp.json || true
                 err=1
               else
                 echo "    ✓ Updated (HTTP ${http_code})"
